# badc

./: .gitignore  .gitmodules  AGENTS.md  CHANGE_LOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: hawkears-local.toml
data/: chunk_manifest_sample.csv
data/audio/: README.md
docs/: conf.py  index.rst  usage.rst
docs/api/: index.rst  modules.rst
docs/cli/: chunk.rst  data.rst  index.rst  infer.rst  misc.rst  report.rst
docs/howto/: aggregate-results.rst  chunk-audio.rst  connect-bogus.rst  datalad-run.rst  index.rst  infer-hpc.rst  infer-local.rst  pipeline-e2e.rst
docs/hpc/: apptainer.rst  chinook.rst  index.rst  sockeye.rst
docs/notebooks/: aggregate-analysis.rst  aggregate_analysis.ipynb  chunk-probe.rst  chunk_probe.ipynb  index.rst  infer-local.rst  infer_local.ipynb
notebooks/: chunk_probe.ipynb
notes/: bogus-datalad.md  chunk-files.md  chunk-orchestrator.md  chunking.md  datalad-plan.md  documentation-plan.md  erin-notes.md  gpu-monitoring.md  inference-plan.md  pipeline-plan.md  roadmap.md  scratch.md
plans/: bogus_chunks.csv  bogus_chunks.json  bogus_chunks_unlocked.json
scripts/: setup_bogus_datalad.sh
setup/: datalad_config.template.sh
tests/: test_aggregate.py  test_aggregate_api.py  test_chunk_cli.py  test_chunk_orchestrator.py  test_chunk_run_cli.py  test_chunk_writer.py  test_cli.py  test_data_utils.py  test_duckdb_helpers.py  test_gpu.py  test_hawkears.py  test_hawkears_runner.py  test_infer_cli.py  test_infer_orchestrator.py  test_manifest_cli.py  test_report_cli.py  test_telemetry.py
(+22 files in other folders)
